<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".AddNewRecords" >
<LinearLayout  android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/text_name"
            android:gravity="right"
            android:text="@string/name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
             android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/entername"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"  >

        <TextView
            android:id="@+id/text_email"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enteremail"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </LinearLayout>

   
    <LinearLayout
        android:id="@+id/linear_address"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/text_address"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/text_city"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entercity"
            android:inputType="text" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/linear_pincode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/text_pincode"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/pincode" />

        <EditText
            android:id="@+id/pincode"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterpincode"
            android:inputType="number" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/linear_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/text_phone"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterphone"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp" >
      
         <Button
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginBottom="28dp"
             android:layout_weight="1"
             android:text="@string/save" />
         
    </LinearLayout>

</LinearLayout>
</ScrollView>